unstable push, pointer issues

--- a/capy++/capy++.vcxproj.filters
+++ b/capy++/capy++.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="TypeStructures.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TypeParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Compiler.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="FundamentalDataTypes\IdentifierAttributes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TypeParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
