--- a/capy++/capy++.vcxproj
+++ b/capy++/capy++.vcxproj
@@ -139,11 +139,13 @@
     <ClCompile Include="Parser.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="SyntaxParser.cpp" />
+    <ClCompile Include="TypeParser.cpp" />
     <ClCompile Include="TypeStructures.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Compiler.h" />
     <ClInclude Include="FundamentalDataTypes\IdentifierAttributes.h" />
+    <ClInclude Include="TypeParser.h" />
     <ClInclude Include="TypeStructures.h" />
     <ClInclude Include="Error.h" />
     <ClInclude Include="ExpressionParser.h" />
